# gestao-de-secretaria-em-massa-python

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
docs/: uso.md
examples/: celulas.csv  comissoes.csv  familias.csv  igrejas.csv  membros.csv
src/automation/: __init__.py  __main__.py  base.py  browser.py  config.py  csv_utils.py  logger.py  results.py
src/automation/entities/: __init__.py  cells.py  churches.py  commissions.py  families.py  members.py
tests/e2e/: __init__.py  test_playwright_fake.py
tests/unit/: test_config.py  test_csv_utils.py  test_results.py
